# ambient_viz

./: .gitignore  20251006_arrangement_1.timeline.json  OPTIMIZATIONS.md  PI_KIOSK_BRINGUP.md  PI_PERFORMANCE.md  README.md  TOUCH_EXPANSION.md  index.html
daisy/crates/dsp/src/: bass.rs  bloom.rs  fm_stab.rs  lib.rs  midi_map.rs  sequencer.rs
daisy/crates/host/src/: main.rs
python/: .gitignore  README.md  pyproject.toml  test_vl53l1x.py
python/ambient_kiosk/: __init__.py  __main__.py  config.py  ingest.py
python/ambient_kiosk/sensors/: breath.py  distance.py  pir.py  touch.py
server/src/: index.js
static/: 20251006_arrangement_1.pat  20251006_arrangement_1.timeline.json  index.html
