[project]
name = "ambient_kiosk"
version = "0.1.0"
description = "Kiosk sensor sidecar: reads AM312 / VL53L1X / HR202+TLC555 / MPR121 on a Raspberry Pi and POSTs events to the Node SSE bridge."
requires-python = ">=3.9"
dependencies = [
    "requests >= 2.28",
    # Real-hardware deps below; installable on Pi only. The package
    # still imports + runs in --mock mode without them, because each
    # sensor module imports its hardware library lazily inside the
    # non-mock code path.
    "gpiozero >= 2.0 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "pigpio >= 1.78 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "adafruit-blinka >= 8.0 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "adafruit-circuitpython-vl53l1x >= 1.2 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
    "adafruit-circuitpython-mpr121 >= 2.1 ; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
]

[project.scripts]
ambient-kiosk = "ambient_kiosk.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ambient_kiosk*"]
